Ingress-nginx/ingress-nginx-internal/sre-mgmt-dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app.kubernetes.io/name: internal-ingress-nginx
    app.kubernetes.io/instance: internal-ingress-nginx
    app.kubernetes.io/version: 1.3.0
    app.kubernetes.io/component: controller
    app.kubernetes.io/part-of: ingress-nginx
  name: ingress-nginx-controller
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 10.127.3.21
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: tcp-8080
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: internal-ingress-nginx
    app.kubernetes.io/instance: internal-ingress-nginx
    app.kubernetes.io/component: controller
