Ingress-nginx/ingress-nginx-internal/sre-mgmt-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
    nginx.ingress.kubernetes.io/client-body-buffer-size: 512k
spec:
  ingressClassName: internal-nginx
  rules:
  - host: msgbe.wadexu.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: msgcenter-api
            port:
              number: 8080
